--- a/ManoTranslator/ManoTranslator/App.config
+++ b/ManoTranslator/ManoTranslator/App.config
@@ -11,7 +11,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Prism" publicKeyToken="40ee6c3a2184dc59" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.1.0.123" newVersion="7.1.0.123" />
+        <bindingRedirect oldVersion="0.0.0.0-7.1.0.135" newVersion="7.1.0.135" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reactive.Core" publicKeyToken="94bc3704cddfc263" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.3000.0" newVersion="3.0.3000.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reactive.Interfaces" publicKeyToken="94bc3704cddfc263" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1000.0" newVersion="3.0.1000.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
